@@ -5,7 +5,7 @@
 # provided some comments here, but things may not be so clear without further
 # explanation, so make sure to read the HTML documentation!
 # 
-# Last Modified: 02-15-2005
+# Last Modified: 03-14-2005
 #
 ################################################################################
 
@@ -82,9 +82,8 @@ define command{
 #
 # These are sample performance data commands that can be used to send performance
 # data output to two text files (one for hosts, another for services).  If you
-# plan on simply writing performance data out to a file, consider compiling
-# Nagios with native file support for performance data.  This is done by
-# supplying the --with-file-perfdata option to the configure script.
+# plan on simply writing performance data out to a file, consider using the 
+# host_perfdata_file and service_perfdata_file options in the main config file.
 #
 ################################################################################
 
